@@ -1,3 +1,14 @@
+2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Eliminate 'iszero: redefined' warning from tcc.
+
+	* awk.h (is_zero): Renamed from `iszero'.
+	(boolval): Update usage.
+	* awkgram.y [GRAMMAR]: Ditto.
+	(negate_num): Ditto.
+	* debug.c (condition_triggered): Ditto.
+	* eval.c (set_LINT): Ditto.
+
 2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.c, command.c: Regenerated with Bison 3.7.
